--- a/.gitignore
+++ b/.gitignore
@@ -68,19 +68,24 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
+# dotenv environment variable.cache
 
 # Next.js build output
 .next
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+# dist
+
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nudist
+
+ist
+
 
 # Gatsby files
 .cache/
